# mm-iot-esp32

./: README.md
examples/sensor_net/: .gitignore  CMakeLists.txt  HOST_TUNING.md  POLLING.md  README.md  STACK_USAGE.md  TASKS_AND_PSRAM.md  partitions.csv  reconfigure.sh  sdkconfig.defaults  sdkconfig.defaults.esp32s3
examples/sensor_net/.cache/clangd/index/: bme68x.c.E95A3DB0DCB6F900.idx  bme68x.h.BB995105894DFA6D.idx  bme68x_defs.h.D33A157CF7EE937C.idx  dashboard_html.c.1F1276A4FA8D6468.idx  dns_forwarder.c.3098AF8052BB149F.idx  dns_forwarder.c.38E270DA7FD53F28.idx  dns_forwarder.h.6A62D2421909F83A.idx  dns_forwarder.h.EF8478D51F3D5A80.idx  esp_now_rcv.c.A16CE3EE387CF564.idx  esp_now_rcv.h.74D1C1B65C17E451.idx  iperf.c.12C3836522A5E434.idx  iperf.c.48FF34DD19E95448.idx  mm_app_common.c.60C36E582CAABC6F.idx  mm_app_common.c.AD79D6669BD25F0A.idx  mm_app_common.h.B89501FB20A27F31.idx  mm_app_common.h.D8C4268B212C002C.idx  mm_app_loadconfig.c.6CB2CFB681A7CF1E.idx  mm_app_loadconfig.c.E9AE19B9479B3B60.idx  mm_app_loadconfig.h.33393FC44D00225B.idx  mm_app_loadconfig.h.FCC11E11719B99B3.idx  nat_router.c.A26531CDD8945917.idx  nat_router.c.CEFFA649A7D8DB3F.idx  nat_router.h.C0231F8B9F8E4C5F.idx  packet.h.98CD741EBB21E0C4.idx  sensor_gateway_http.c.ED268170DA0DC636.idx  sensor_gateway_http.h.CA6CA152A7664ADB.idx  settings.c.489E1641C56619FF.idx  settings.c.A4DAFAF52EFA50BC.idx  settings.h.12404EFC7A57B4B5.idx  settings.h.6381810EAE864BE7.idx  time_sync.c.EF3F6ECB775AEB5A.idx  time_sync.h.D26786E0C480B264.idx  web_config.c.49877F783F500131.idx  web_config.c.CBF135C0B03E436D.idx  web_config.h.1BE21CB6F9B5D07C.idx  web_config.h.34CD0FBC151893E4.idx
examples/sensor_net/components/ds18b20/: CMakeLists.txt  ds18b20.c  ds18b20.h
examples/sensor_net/components/halow_mesh/: CMakeLists.txt  halow_mesh.c  halow_mesh.h  halow_mesh_overlay.c  halow_mesh_overlay.h
examples/sensor_net/components/ld2410/: CMakeLists.txt  ld2410.c  ld2410.h
examples/sensor_net/main/: CMakeLists.txt  Kconfig.projbuild
examples/sensor_net/main/src/: dashboard_embedded.c  dashboard_html.c  dns_forwarder.c  dns_forwarder.h  esp_now_rcv.c  esp_now_rcv.h  gateway_main.c  halow_mesh_app.h  iperf.c  mm_app_common.c  mm_app_common.h  mm_app_loadconfig.c  nat_router.c  nat_router.h  packet.h  performance_main.c  sensor_gateway_http.c  sensor_gateway_http.h  sensor_homekit.c  sensor_homekit.h  settings.c  settings.h  time_sync.c  time_sync.h  weather_fetch.c  web_config.c  web_config.h  wifi_task_stack_override.c
examples/sensor_net/main/web/: README.md  dashboard.css  dashboard.html  dashboard.js  embed_web.py
examples/sensor_net/sensor_unit/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/sensor_net/sensor_unit/build_c6/: local_components_list.temp.yml
examples/sensor_net/sensor_unit/build_c6/log/: idf_py_stderr_output_13555  idf_py_stdout_output_13555
examples/sensor_net/sensor_unit/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
examples/sensor_net/sensor_unit/main/include/: camera_stream.h  mm_app_common.h
examples/sensor_net/sensor_unit/main/src/: ble_logger.c  camera_stream.c  esp_now_send.c  halow_start.c  main.c  mm_app_common.c
examples/sensor_net/sensor_unit_c6/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
examples/sensor_net/sensor_unit_c6/.cache/clangd/index/: ble_logger.c.2B957D9B7854A27D.idx  ble_logger.h.351DAB67BBC2AC0B.idx  esp_now_send.c.E4488248480E963D.idx  esp_now_send.h.3667B2A02ECB091E.idx  main.c.7E9D50F15917FE0C.idx  packet.h.8C474B98DD78C3ED.idx
examples/sensor_net/sensor_unit_c6/components/: bme68x
examples/sensor_net/sensor_unit_c6/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
examples/sensor_net/sensor_unit_c6/main/include/: ble_logger.h  esp_now_send.h  packet.h
examples/sensor_net/sensor_unit_c6/main/src/: ble_logger.c  ble_logger_bt.c  esp_now_send.c  main.c  wifi_logger.c
examples/sensor_net/sensor_unit_camera/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/sensor_net/sensor_unit_camera/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
examples/sensor_net/sensor_unit_camera/main/include/: camera_stream.h  camera_unit_settings.h  esp_now_send_camera.h  halow_config.h  mic_stream.h  mm_app_common.h  mm_app_loadconfig.h  packet.h
examples/sensor_net/sensor_unit_camera/main/src/: camera_stream.c  camera_unit_settings.c  esp_now_send_camera.c  halow_config.c  halow_start.c  main.c  mic_stream.c  mm_app_common.c  mm_app_loadconfig.c
examples/sensor_net/sensor_unit_s3/: CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.defaults.esp32c6
examples/sensor_net/sensor_unit_s3/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
examples/sensor_net/sensor_unit_s3/main/include/: ble_logger.h  esp_now_send.h  packet.h  wifi_logger.h
examples/sensor_net/sensor_unit_s3/main/src/: ble_logger.c  ble_logger_bt.c  esp_now_send.c  main.c  mm_app_common.c  mm_app_loadconfig.c  wifi_logger.c
